--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Flutter Web App</title>
+    <title>nano.d3x</title>
 
     <!-- Firebase SDKs (optional, if needed in your project) -->
     <script defer src="/__/firebase/11.4.0/firebase-app-compat.js"></script>
